2010-07-20  Daniel Erat  <derat@chromium.org>

Reviewed by Ojan Vafai.

        Subpixel rendering always disabled for Chromium Linux
        https://bugs.webkit.org/show_bug.cgi?id=42220

        Layout test addition to check that Chromium Linux honors fontconfig
        settings enabling or disabling subpixel rendering per-strike.

        * platform/chromium-linux/platform/chromium/fast/text/chromium-linux-fontconfig-renderstyle-expected.checksum:
        * platform/chromium-linux/platform/chromium/fast/text/chromium-linux-fontconfig-renderstyle-expected.png:
        * platform/chromium-linux/platform/chromium/fast/text/chromium-linux-fontconfig-renderstyle-expected.txt:
        * platform/chromium/fast/text/chromium-linux-fontconfig-renderstyle.html:
2010-07-20  Daniel Erat  <derat@chromium.org>

        Reviewed by Ojan Vafai.

        Subpixel rendering always disabled for Chromium Linux
        https://bugs.webkit.org/show_bug.cgi?id=42220

        Explicitly initialize global Chromium Linux isSkiaSubpixelGlyphs
        flag to false for clarity.

        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
2010-07-20  Daniel Erat  <derat@chromium.org>

        Reviewed by Ojan Vafai.

        Subpixel rendering always disabled for Chromium Linux
        https://bugs.webkit.org/show_bug.cgi?id=42220

        Honor Fontconfig subpixel rendering setting on Chromium Linux.

        * src/gtk/WebFontInfo.cpp:
        (WebKit::WebFontInfo::renderStyleForStrike):

Canonical link: https://commits.webkit.org/54618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63780 268f45cc-cd09-0410-ab3c-d52691b4dbfc